--- a/travel.html
+++ b/travel.html
@@ -16,8 +16,8 @@
     <!-- Navigation Bar -->
     <header>
         <nav>
-          <img src="Untitled_design-removebg-preview.png" alt="" class="hello">
-             
+            <img src="Untitled_design-removebg-preview.png" alt="" class="hello">
+
             <h1 class="logo"> Perfect<i>Desti</i></h1>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -59,12 +59,13 @@
     <!-- Destinations Section -->
     <section id="destinations" class="destinations-section">
         <h2>Featured Destinations</h2>
+        <a href="rajasthan.html">
         <div class="destination-cards">
             <div class="card">
                 <img src="destination 1.jpg" alt="Destination 1">
                 <h3>RAJASTHAN</h3>
                 <p>Discover the Land of Kings</p>
-            </div>
+            </div></a>
             <div class="card">
                 <img src="dest2.jpg" alt="Destination 2">
                 <h3>COORG, KARNATAKA</h3>
